# emux

./: AUTHORS  Kconfig  Makefile.am  NEWS  README  configure.ac  linker.lds
controllers/: Kconfig
controllers/audio/: Kconfig  apu.c  papu.c  sn76489.c  spu.c
controllers/cdrom/: Kconfig  psx_cdrom.c
controllers/dma/: Kconfig  nes_sprite.c  psx_dma.c
controllers/input/: Kconfig  gb_joypad.c  nes_controller.c  psx_controller.c  psx_controller.h  psx_dualshock.c  sms_controller.c
controllers/mapper/: Kconfig  gb_mapper.c  gb_mapper.h  mbc1.c  mbc2.c  mmc1.c  mmc3.c  nes_mapper.c  nes_mapper.h  nrom.c  rom.c  sega_mapper.c  sms_mapper.c  sms_mapper.h
controllers/media/: Kconfig  mdec.c
controllers/serial/: Kconfig  gb_serial.c
controllers/timer/: Kconfig  gb_timer.c  psx_timer.c
controllers/video/: Kconfig  gpu.c  lcdc.c  ppu.c  vdp.c
cpu/: Kconfig  chip8_cpu.c  lr35902.c  r3051.c  rp2a03.c  z80.c
frontends/: Kconfig
frontends/audio/: Kconfig  retro_audio.c  sdl_audio.c
frontends/cdrom/: Kconfig  cdio_cdrom.c
frontends/input/: Kconfig  caca_input.c  retro_input.c  sdl_input.c
frontends/video/: Kconfig  caca_video.c  opengl_video.c  retro_video.c  sdl_video.c
include/: audio.h  bitops.h  cdrom.h  clock.h  cmdline.h  controller.h  cpu.h  env.h  event.h  file.h  input.h  list.h  log.h  machine.h  memory.h  port.h  resource.h  util.h  video.h
include/controllers/mapper/: gb_mapper.h  nes_mapper.h  sms_mapper.h
libretro/: Makefile  Makefile.android-arm64_v8a  Makefile.android-armeabi  Makefile.android-armeabi_v7a  Makefile.android-mips  Makefile.android-mips64  Makefile.android-x86  Makefile.android-x86_64  Makefile.android_arm64-v8a  Makefile.android_armeabi  Makefile.android_armeabi-v7a  Makefile.android_mips  Makefile.android_mips64  Makefile.android_x86  Makefile.android_x86_64  Makefile.common  Makefile.linux-portable_x86  Makefile.linux-portable_x86_64  Makefile.linux-x86  Makefile.linux-x86_64  Makefile.linux_portable-x86  Makefile.linux_portable-x86_64  Makefile.linux_x86  Makefile.linux_x86_64  Makefile.mingw32  Makefile.mingw64  Makefile.mingw_x86  Makefile.mingw_x86_64  Makefile.osx_x86  Makefile.osx_x86_64  Makefile.rules  Makefile.vita_arm  Makefile.wii  Makefile.windows-x86  Makefile.windows-x86_64  Makefile.windows_x86  Makefile.windows_x86_64  libretro-test.c  libretro.c
libretro/jni/: Android.mk
mach/: Kconfig  chip8.c  gb.c  nes.c  psx.c  sms.c
mach/configs/: all_defconfig  chip8_defconfig  gb_defconfig  nes_defconfig  psx_defconfig  sms_defconfig
main/: audio.c  bitops.c  cdrom.c  clock.c  cmdline.c  controller.c  cpu.c  env.c  event.c  file.c  input.c  list.c  log.c  machine.c  main.c  memory.c  port.c  resource.c  video.c
scripts/: checkpatch.pl
